welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:8: error: ';' expected but 'else' found.
  } else {
    ^answerCell:12: error: Unmatched closing brace '}' ignored here
 }
 ^